syntax = "proto3";
package upload;

service UploadService {
    rpc Upload(stream UploadRequest) returns (UploadStatus);
}

message UploadRequest {
    oneof data {
        FileInfo file_info = 1;
        bytes chunk_data = 2;
    };
}

message FileInfo {
    string pc_id = 1;
    string file_type = 2;
}

enum UploadStatusCode {
    Unknown = 0;
    Ok = 1;
    Failed = 2;
}

message UploadStatus {
    string message = 1;
    UploadStatusCode code = 2;
}